Fix for wa_list_item_burger_menu not to be cut off. Also marked word 'split' for translation

--- a/octoprint_mrbeam/static/css/mrbeam.css
+++ b/octoprint_mrbeam/static/css/mrbeam.css
@@ -2127,8 +2127,8 @@ input.search-query,
 }
 
 #wa_filelist > div {
-    /*height: 50vh;*/
-    /*overflow-y:auto;*/
+    height: 50vh;
+    overflow-y:auto;
 }
 
 .print-control {
